Update OkapiClientImpl to support both login endpoints `/authn/login' and /authn/login-with-expiry'